k8s/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cseb-http-route
spec:
  parentRefs:
    - name: cseb-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cseb-active  # ArgoCD will ensure this points to the "Live" version
          port: 80
